--- a/spring-study/jdbc/s01/pom.xml
+++ b/spring-study/jdbc/s01/pom.xml
@@ -34,6 +34,11 @@
             <version>8.0.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 
 </project>
