--- a/spring-study/jdbc/s01/pom.xml
+++ b/spring-study/jdbc/s01/pom.xml
@@ -55,6 +55,13 @@
             <version>5.2.6.RELEASE</version>
         </dependency>
 
+        <!-- logback日志组件, Spring框架默认集成 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
