--- a/springmvc-study/first-springmvc/pom.xml
+++ b/springmvc-study/first-springmvc/pom.xml
@@ -29,5 +29,20 @@
         </dependency>
 
 
+        <!-- freemarker引入依赖 spring上下文支持依赖-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.1.9.RELEASE</version>
+        </dependency>
+
+
+
+
     </dependencies>
 </project>
