--- a/springmvc-study/restful/pom.xml
+++ b/springmvc-study/restful/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.1.9.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 
 </project>
