--- a/springmvc-study/restful/pom.xml
+++ b/springmvc-study/restful/pom.xml
@@ -25,6 +25,25 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
         </dependency>
+
+
+        <!-- jackson依赖 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
     </dependencies>
 
 </project>
