--- a/springmvc-study/interceptor/pom.xml
+++ b/springmvc-study/interceptor/pom.xml
@@ -57,6 +57,12 @@
 
 
 
+        <!-- 日志 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
 
     </dependencies>
 
